@@ -10,6 +10,7 @@
 	(peditor_value_changed): Retrieve the applier from the preferences
 	object and use it to apply settings on the preview widget
 	(setup_dialog): Connect missing signal
+	(setup_dialog): Enabled set_guard call
 
 	* background.schema: Added wallpaper-enabled
 
